# tasks

./: .gitignore  README.md  meson.build
assets/interfaces/: error.txt  main.txt
data/: tasks.data
src/: meson.build  tasks.cpp
subprojects/: app.wrap
